reorged auth to streamline the process

--- a/auth/authorization_code/public/index.html
+++ b/auth/authorization_code/public/index.html
@@ -14,7 +14,6 @@
         width: 500px;
       }
     </style>
-  <link rel="shortcut icon" href="">
   </head>
 
   <body>
@@ -47,7 +46,7 @@
             <dt>Link</dt><dd><a href="{{href}}">{{href}}</a></dd>
             <dt>Profile Image</dt><dd class="clearfix"><a href="{{images.0.url}}">{{images.0.url}}</a></dd>
             <dt>Country</dt><dd>{{country}}</dd>
-          </>
+          </dl>
         </div>
       </div>
     </script>
@@ -56,7 +55,7 @@
       <h2>oAuth info</h2>
       <dl class="dl-horizontal">
         <dt>Access token</dt><dd class="text-overflow">{{access_token}}</dd>
-        <dt>Refresh token</dt><dd class="text-overflow">{{refresh_token}}</dd>
+        <dt>Refresh token</dt><dd class="text-overflow">{{refresh_token}}></dd>
       </dl>
     </script>
 
@@ -140,3 +139,4 @@
     </script>
   </body>
 </html>
+
